[gd_scene load_steps=16 format=2]

[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/TestLevel.gd" type="Script" id=2]
[ext_resource path="res://Assets/Tilesets/DungeonTiles.tres" type="TileSet" id=3]
[ext_resource path="res://Items/Key.tscn" type="PackedScene" id=4]
[ext_resource path="res://Screens/UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interactables/SlidingDoor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interactables/Switch.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Audio/BGM/underground.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/SFX/dooropen.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/SFX/gate.ogg" type="AudioStream" id=10]
[ext_resource path="res://Items/Potion.tscn" type="PackedScene" id=11]
[ext_resource path="res://Interactables/Teleporter.tscn" type="PackedScene" id=12]
[ext_resource path="res://Actors/Enemy.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("SlidingDoorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Open:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("SlidingDoorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Open:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="TestLevel" type="Node2D"]
script = ExtResource( 2 )

[node name="LevelAudio" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="LevelAudio"]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="DoorOpen" type="AudioStreamPlayer" parent="LevelAudio"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="GateOpen" type="AudioStreamPlayer" parent="LevelAudio"]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="UI" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 32 )

[node name="Enemy" parent="." instance=ExtResource( 13 )]
position = Vector2( 134.5, 38.986 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( -393203, 0, 0, -393202, 0, 1, -393201, 0, 1, -393200, 0, 1, -393199, 0, 1, -393198, 0, 131076, -393197, 0, 2, -327667, 0, 65536, -327666, 0, 3, -327665, 0, 4, -327664, 0, 131073, -327663, 0, 131073, -327662, 0, 5, -327661, 0, 65538, -262131, 0, 65536, -262130, 0, 65538, -262129, 2, 0, -262128, 2, 0, -262127, 2, 0, -262126, 0, 65536, -262125, 0, 65539, -196595, 0, 65541, -196594, 0, 65538, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 0, 65541, -196589, 0, 65539, -131059, 0, 65536, -131058, 0, 65539, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 0, 65541, -131053, 0, 65539, -65523, 0, 65536, -65522, 0, 131075, -65521, 0, 2, -65520, 1, 0, -65519, 0, 0, -65518, 0, 131077, -65517, 0, 65538, 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 131076, 4, 0, 1, 5, 0, 131076, 6, 0, 1, 7, 0, 131076, 8, 0, 131076, 9, 0, 1, 10, 0, 131076, 11, 0, 1, 12, 0, 131076, 13, 0, 131077, 14, 0, 65537, 15, 0, 65538, 16, 1, 0, 17, 0, 65541, 18, 0, 65537, 19, 0, 131075, 20, 0, 131076, 21, 0, 131076, 22, 0, 1, 23, 0, 1, 24, 0, 131076, 25, 0, 131076, 26, 0, 131076, 27, 0, 131076, 28, 0, 131076, 29, 0, 131076, 30, 0, 1, 31, 0, 1, 32, 0, 1, 33, 0, 131076, 34, 0, 1, 35, 0, 131076, 36, 0, 131076, 37, 0, 1, 38, 0, 131076, 39, 0, 131076, 40, 0, 1, 41, 0, 2, 65536, 0, 65541, 65537, 0, 3, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 4, 65541, 0, 4, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 4, 65545, 0, 131073, 65546, 0, 4, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 4, 65550, 0, 4, 65551, 0, 131074, 65552, 1, 0, 65553, 0, 131072, 65554, 0, 131073, 65555, 0, 4, 65556, 0, 5, 65557, 0, 3, 65558, 0, 4, 65559, 0, 4, 65560, 0, 131073, 65561, 0, 4, 65562, 0, 4, 65563, 0, 4, 65564, 0, 5, 65565, 0, 3, 65566, 0, 131073, 65567, 0, 131073, 65568, 0, 4, 65569, 0, 131073, 65570, 0, 4, 65571, 0, 5, 65572, 0, 65537, 65573, 0, 65537, 65574, 0, 65537, 65575, 0, 65537, 65576, 0, 65537, 65577, 0, 65538, 131072, 0, 65536, 131073, 0, 65539, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 196608, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 196608, 131088, 5, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 0, 65541, 131093, 0, 65539, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 2, 196608, 131098, 2, 0, 131099, 2, 0, 131100, 0, 65541, 131101, 0, 65538, 131102, 2, 0, 131103, 2, 0, 131104, 2, 0, 131105, 2, 196608, 131106, 2, 0, 131107, 0, 131072, 131108, 0, 4, 131109, 0, 4, 131110, 0, 131073, 131111, 0, 4, 131112, 0, 5, 131113, 0, 65539, 196608, 0, 65541, 196609, 0, 65538, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 0, 131072, 196629, 0, 131074, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 0, 65536, 196637, 0, 65538, 196638, 2, 0, 196639, 2, 0, 196640, 2, 0, 196641, 2, 0, 196642, 2, 0, 196643, 2, 65536, 196644, 2, 0, 196645, 2, 0, 196646, 2, 0, 196647, 2, 0, 196648, 0, 65541, 196649, 0, 65539, 262144, 0, 65536, 262145, 0, 65538, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 2, 65536, 262165, 2, 131072, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 0, 65541, 262173, 0, 65539, 262174, 2, 0, 262175, 2, 196608, 262176, 2, 0, 262177, 2, 0, 262178, 2, 0, 262179, 2, 65536, 262180, 2, 0, 262181, 2, 0, 262182, 2, 0, 262183, 2, 0, 262184, 0, 65541, 262185, 0, 65539, 327680, 0, 65541, 327681, 0, 65538, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 0, 65536, 327709, 0, 65539, 327710, 2, 0, 327711, 2, 0, 327712, 2, 0, 327713, 2, 0, 327714, 2, 0, 327715, 2, 65536, 327716, 2, 0, 327717, 2, 0, 327718, 2, 196608, 327719, 2, 0, 327720, 0, 65541, 327721, 0, 65539, 393216, 0, 65541, 393217, 0, 131075, 393218, 0, 1, 393219, 0, 131076, 393220, 0, 131076, 393221, 0, 131076, 393222, 0, 131076, 393223, 0, 131076, 393224, 0, 131076, 393225, 0, 1, 393226, 0, 2, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 0, 0, 393241, 0, 2, 393242, 1, 0, 393243, 1, 0, 393244, 0, 65536, 393245, 0, 65539, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 2, 65536, 393252, 2, 0, 393253, 8, 1, 393254, 2, 0, 393255, 2, 0, 393256, 0, 65536, 393257, 0, 65539, 458752, 0, 65541, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 3, 458759, 0, 131073, 458760, 0, 4, 458761, 0, 5, 458762, 0, 131075, 458763, 0, 1, 458764, 0, 2, 458765, 1, 0, 458766, 0, 0, 458767, 0, 1, 458768, 0, 1, 458769, 0, 1, 458770, 0, 1, 458771, 0, 131076, 458772, 0, 131076, 458773, 0, 2, 458774, 1, 0, 458775, 1, 0, 458776, 0, 131072, 458777, 0, 131074, 458778, 1, 0, 458779, 1, 0, 458780, 0, 65536, 458781, 0, 65538, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 1, 0, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 458792, 0, 65541, 458793, 0, 65539, 524288, 0, 65536, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 3, 524292, 0, 4, 524293, 0, 4, 524294, 0, 131074, 524295, 2, 0, 524296, 2, 0, 524297, 0, 65541, 524298, 0, 3, 524299, 0, 131073, 524300, 0, 131074, 524301, 1, 0, 524302, 0, 131072, 524303, 0, 131073, 524304, 0, 131073, 524305, 0, 131073, 524306, 0, 4, 524307, 0, 131073, 524308, 0, 5, 524309, 0, 65538, 524310, 1, 0, 524311, 1, 0, 524312, 2, 65536, 524313, 2, 131072, 524314, 1, 0, 524315, 1, 0, 524316, 0, 65536, 524317, 0, 65538, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 0, 65541, 524329, 0, 65539, 589824, 0, 65536, 589825, 0, 3, 589826, 0, 131073, 589827, 0, 131074, 589828, 2, 0, 589829, 7, 0, 589830, 2, 131072, 589831, 1, 0, 589832, 1, 0, 589833, 0, 65541, 589834, 0, 65539, 589835, 2, 0, 589836, 2, 0, 589837, 1, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 196608, 589843, 2, 0, 589844, 0, 65541, 589845, 0, 65539, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 0, 65536, 589853, 0, 65538, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 589862, 1, 0, 589863, 1, 0, 589864, 0, 65536, 589865, 0, 65538, 655360, 0, 65536, 655361, 0, 65539, 655362, 8, 0, 655363, 2, 131072, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 0, 65536, 655370, 0, 65538, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 0, 65541, 655381, 0, 65538, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 0, 65541, 655389, 0, 65539, 655390, 1, 0, 655391, 1, 0, 655392, 1, 0, 655393, 1, 0, 655394, 1, 0, 655395, 1, 0, 655396, 1, 0, 655397, 1, 0, 655398, 1, 0, 655399, 1, 0, 655400, 0, 65536, 655401, 0, 65538, 720896, 0, 65536, 720897, 0, 65539, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 0, 65541, 720906, 0, 65538, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 0, 65541, 720917, 0, 65538, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 0, 65536, 720925, 0, 65539, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 720935, 1, 0, 720936, 0, 65536, 720937, 0, 65539, 786432, 0, 65536, 786433, 0, 65538, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 0, 65536, 786442, 0, 65538, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 0, 0, 786449, 0, 2, 786450, 1, 0, 786451, 1, 0, 786452, 0, 65536, 786453, 0, 131075, 786454, 0, 1, 786455, 0, 2, 786456, 1, 0, 786457, 0, 0, 786458, 0, 131076, 786459, 0, 1, 786460, 0, 131077, 786461, 0, 65538, 786462, 1, 0, 786463, 1, 0, 786464, 1, 0, 786465, 1, 0, 786466, 1, 0, 786467, 1, 0, 786468, 1, 0, 786469, 1, 0, 786470, 1, 0, 786471, 1, 0, 786472, 0, 65541, 786473, 0, 65538, 851968, 0, 65541, 851969, 0, 65538, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 0, 65541, 851978, 0, 65539, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 0, 65541, 851985, 0, 65538, 851986, 1, 0, 851987, 1, 0, 851988, 0, 65541, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65538, 851992, 1, 0, 851993, 0, 65541, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65538, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852005, 1, 0, 852006, 1, 0, 852007, 1, 0, 852008, 0, 65541, 852009, 0, 65539, 917504, 0, 65536, 917505, 0, 131075, 917506, 0, 1, 917507, 0, 1, 917508, 0, 131076, 917509, 0, 131076, 917510, 0, 1, 917511, 0, 131076, 917512, 0, 1, 917513, 0, 131077, 917514, 0, 65538, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 0, 65541, 917521, 0, 131075, 917522, 0, 2, 917523, 1, 0, 917524, 0, 65541, 917525, 0, 3, 917526, 0, 131073, 917527, 0, 131074, 917528, 1, 0, 917529, 0, 131072, 917530, 0, 131073, 917531, 0, 131073, 917532, 0, 5, 917533, 0, 65538, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 917542, 1, 0, 917543, 1, 0, 917544, 0, 65536, 917545, 0, 65538, 983040, 0, 65541, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65539, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 0, 65541, 983057, 0, 3, 983058, 0, 131074, 983059, 1, 0, 983060, 0, 131072, 983061, 0, 131074, 983062, 2, 0, 983063, 2, 0, 983064, 1, 0, 983065, 2, 0, 983066, 2, 196608, 983067, 2, 0, 983068, 0, 65541, 983069, 0, 65539, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 0, 65536, 983081, 0, 65538, 1048576, 0, 65536, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65538, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 0, 65541, 1048593, 0, 65538, 1048594, 2, 0, 1048595, 1, 0, 1048596, 2, 196608, 1048597, 2, 131072, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 0, 65541, 1048605, 0, 131075, 1048606, 0, 131076, 1048607, 0, 1, 1048608, 0, 1, 1048609, 0, 131076, 1048610, 0, 1, 1048611, 0, 1, 1048612, 0, 1, 1048613, 0, 131076, 1048614, 0, 1, 1048615, 0, 131076, 1048616, 0, 131077, 1048617, 0, 65539, 1114112, 0, 65536, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65538, 1114123, 1, 0, 1114124, 3, 0, 1114125, 3, 1, 1114126, 3, 2, 1114127, 1, 0, 1114128, 0, 65536, 1114129, 0, 65539, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 0, 65541, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65537, 1114150, 0, 65537, 1114151, 0, 65537, 1114152, 0, 65537, 1114153, 0, 65538, 1179648, 0, 65536, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65538, 1179659, 1, 0, 1179660, 3, 65536, 1179661, 3, 65537, 1179662, 3, 65538, 1179663, 1, 0, 1179664, 0, 65536, 1179665, 0, 65539, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 0, 65536, 1179677, 0, 3, 1179678, 0, 4, 1179679, 0, 4, 1179680, 0, 131073, 1179681, 0, 4, 1179682, 0, 4, 1179683, 0, 4, 1179684, 0, 131073, 1179685, 0, 4, 1179686, 0, 131073, 1179687, 0, 131073, 1179688, 0, 4, 1179689, 0, 131074, 1245184, 0, 65536, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65539, 1245195, 1, 0, 1245196, 3, 131072, 1245197, 3, 131073, 1245198, 3, 131074, 1245199, 1, 0, 1245200, 0, 65536, 1245201, 0, 131075, 1245202, 0, 131076, 1245203, 0, 1, 1245204, 0, 1, 1245205, 0, 2, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1245211, 1, 0, 1245212, 0, 65541, 1245213, 0, 65538, 1310720, 0, 65541, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 131075, 1310731, 0, 1, 1310732, 0, 131076, 1310733, 0, 131076, 1310734, 0, 131076, 1310735, 0, 1, 1310736, 0, 131077, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 131075, 1310742, 0, 1, 1310743, 0, 1, 1310744, 0, 131076, 1310745, 0, 131076, 1310746, 0, 131076, 1310747, 0, 131076, 1310748, 0, 131077, 1310749, 0, 65538, 1376256, 0, 131072, 1376257, 0, 4, 1376258, 0, 4, 1376259, 0, 131073, 1376260, 0, 131073, 1376261, 0, 4, 1376262, 0, 4, 1376263, 0, 131073, 1376264, 0, 4, 1376265, 0, 131073, 1376266, 0, 4, 1376267, 0, 131073, 1376268, 0, 131073, 1376269, 0, 131073, 1376270, 0, 4, 1376271, 0, 131073, 1376272, 0, 131073, 1376273, 0, 131073, 1376274, 0, 4, 1376275, 0, 4, 1376276, 0, 4, 1376277, 0, 4, 1376278, 0, 131073, 1376279, 0, 131073, 1376280, 0, 131073, 1376281, 0, 4, 1376282, 0, 4, 1376283, 0, 4, 1376284, 0, 131073, 1376285, 0, 131074 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( 15, 0, 131075, 16, 0, 1, 17, 0, 131077, 65551, 0, 4, 65552, 0, 4, 65553, 0, 4, 131088, 4, 0, 851991, 0, 131075, 851992, 0, 1, 851993, 0, 131077, 917522, 0, 1, 917523, 0, 1, 917524, 0, 131077, 917527, 0, 131073, 917528, 0, 131073, 917529, 0, 131073, 983058, 0, 131073, 983059, 0, 131073, 983060, 0, 131073, 983064, 4, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="TileMap3" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 983064, 6, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Keys" type="Node" parent="."]
process_priority = -1

[node name="Key" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 201.012, 84.2159 )

[node name="Key2" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 132, -16 )
keytype = 3

[node name="SlidingDoor" parent="." instance=ExtResource( 6 )]
position = Vector2( 156, 132 )

[node name="SlidingDoor2" parent="." instance=ExtResource( 6 )]
position = Vector2( 300, 52 )

[node name="SlidingDoor3" parent="." instance=ExtResource( 6 )]
position = Vector2( 44, 76.5384 )

[node name="AnimationPlayer" parent="SlidingDoor3" index="2"]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="Open" parent="SlidingDoor3" index="3"]
stream_paused = true

[node name="Switch" parent="." instance=ExtResource( 7 )]
position = Vector2( 196, 140 )
toggleable = true

[node name="Switch2" parent="." instance=ExtResource( 7 )]
position = Vector2( 280, 92.7159 )
toggleable = true

[node name="Potion" parent="." instance=ExtResource( 11 )]
position = Vector2( 32, 96.7159 )

[node name="Teleporter" parent="." instance=ExtResource( 12 )]
position = Vector2( 108, 148 )
teleport_to = Vector2( 31, 7 )

[node name="Teleporter2" parent="." instance=ExtResource( 12 )]
position = Vector2( 300, 52 )
is_stairs = true
teleport_to = Vector2( 5, 10 )

[node name="Teleporter3" parent="." instance=ExtResource( 12 )]
position = Vector2( 44, 76 )
is_stairs = true
teleport_to = Vector2( 37, 7 )

[node name="Teleporter4" parent="." instance=ExtResource( 12 )]
position = Vector2( 20, 84 )
switch_scene = true
next_scene_path = "res://Levels/LevelSequence/Level_01.tscn"
is_stairs = true
teleport_to = Vector2( -15, 13 )
[connection signal="collided" from="Player" to="." method="_on_Player_collided"]
[connection signal="switched" from="Switch" to="." method="_on_Switch_switched"]
[connection signal="switched" from="Switch2" to="." method="_on_Switch2_switched"]

[editable path="SlidingDoor3"]
